welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: '(' expected but identifier found.
                            for (compteur <- 1 to 6) {if estSurBiscuit() {vuBiscuit = true;avance()}} ; for (compteur <- 1 to 6) {recule()};
                                                         ^Program:2: error: illegal start of simple expression
                            for (compteur <- 1 to 6) {if estSurBiscuit() {vuBiscuit = true;avance()}} ; for (compteur <- 1 to 6) {recule()};
                                                                                                    ^